--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -16,12 +16,14 @@
   ],
   "scripts": {
     "build": "yarn postcss",
+    "develop": "yarn postcss -w",
     "postcss": "postcss lib/main.css -o dist/main.css"
   },
   "devDependencies": {
     "autoprefixer": "^9.3.1",
     "cssnano": "^4.1.7",
     "postcss-cli": "^6.0.1",
+    "postcss-extend-rule": "^2.0.0",
     "postcss-import": "^12.0.1"
   },
   "dependencies": {
