--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -23,7 +23,8 @@
     "react-live": "^1.12.0",
     "serve": "^10.0.2",
     "styles": "^0.0.1",
-    "swarm-components": "^0.0.1"
+    "swarm-components": "^0.0.1",
+    "swarm-constants": "^0.0.1"
   },
   "keywords": [
     "gatsby"
