--- a/packages/swarm-constants/package.json
+++ b/packages/swarm-constants/package.json
@@ -25,6 +25,7 @@
     "url": "https://github.com/meetup/swarm-ui/issues"
   },
   "devDependencies": {
+    "bundlesize": "^0.17.0",
     "style-dictionary": "hsbacot/style-dictionary#buxfix/css-comments"
   },
   "dependencies": {
