--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -17,7 +17,7 @@
     "gatsby-source-filesystem": "^2.0.4",
     "gatsby-transformer-sharp": "^2.1.4",
     "html-loader": "^0.5.5",
-    "meetup-web-components": "6.1.2630-beta",
+    "meetup-web-components": "git@github.com:meetup/meetup-web-components.git#6.1.2646-beta",
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
     "react-helmet": "^5.2.0",
@@ -40,6 +40,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "bundlesize": "^0.17.0",
     "prettier": "^1.14.2"
   },
   "repository": {
