--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,10 @@ before_install:
 
 script:
   - echo "no test scripts"
+
+deploy:
+  provider: script
+  script: "yarn deploy"
+  skip_cleanup: true
+  on:
+    condition: $TRAVIS_EVENT_TYPE = push
