--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "deploy": "lerna version --conventional-commits --yes && lerna publish --from-package"
+  },
   "devDependencies": {
     "lerna": "^3.4.3"
   }
