--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "packages/*"
   ],
   "scripts": {
-    "deploy": "lerna version --conventional-commits --yes && lerna publish --from-package"
+    "deploy": "lerna publish --conventional-commits --yes"
   },
   "devDependencies": {
     "lerna": "^3.4.3"
