--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
 
 deploy:
   provider: script
-  script: "yarn deploy"
+  script: "git checkout master && yarn deploy"
   skip_cleanup: true
   on:
     condition: $TRAVIS_EVENT_TYPE = push
