--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "lerna": "^3.4.3",
-    "lint-staged": "^8.1.3"
+    "lint-staged": "^8.1.3",
+    "prettier": "^1.16.4"
   },
   "husky": {
     "hooks": {
