--- a/packages/swarm-docs/package.json
+++ b/packages/swarm-docs/package.json
@@ -11,7 +11,9 @@
     "@mdx-js/tag": "^0.15.6",
     "@meetup/swarm-components": "^0.3.1",
     "@meetup/swarm-constants": "^0.2.2",
+    "@meetup/swarm-styles": "^0.1.4",
     "constants": "^0.0.2",
+    "core-js": "^2.6.5",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.15",
     "gatsby-mdx": "^0.2.0",
