fix: added siteTitle variable back in, renamed site title in gatsy config and package

--- a/packages/swarm-docs/package.json
+++ b/packages/swarm-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@meetup/swarm-docs",
-  "description": "Swarm Docs",
+  "description": "Swarm Design System",
   "version": "0.6.1",
   "author": "Hunter Bacot <hsbacot@gmail.com>",
   "publishConfig": {
