fix: added babel env preset to compile to es5 compatibility

--- a/packages/swarm-components/package.json
+++ b/packages/swarm-components/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.4.2",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-plugin-react-docgen": "^2.0.2",
