--- a/packages/swarm-components/.babelrc
+++ b/packages/swarm-components/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["@babel/preset-flow", "@babel/preset-react"],
+  "presets": ["@babel/preset-flow", "@babel/preset-react", "@babel/preset-env"],
   "plugins": ["react-docgen"]
 }
