--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,25 @@ before_install:
   - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > $HOME/.npmrc
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.13.0
   - export PATH=$HOME/.yarn/bin:$PATH
-  - yarn --version
+
+before_script:
+  - git diff --exit-code yarn.lock
+  # configure git to tag release
+  - git config --global user.email "travis-ci@meetup.com"
+  - git config --global user.name "muptravis"
+  - git config --global push.default matching
+  # configure ssh auth to push tags to GH
+  - eval "$(ssh-agent)"
+  - echo "$GITHUB_DEPLOY_KEY" > /tmp/github_deploy_key
+  - chmod 600 /tmp/github_deploy_key
+  - ssh-add /tmp/github_deploy_key
 
 script:
-  - echo "no test scripts"
+  - make publish
 
-deploy:
-  provider: script
-  script: "git checkout master && yarn deploy"
-  skip_cleanup: true
-  on:
-    condition: $TRAVIS_EVENT_TYPE = push
+# deploy:
+#   provider: script
+#   script: "git checkout master && yarn deploy"
+#   skip_cleanup: true
+#   on:
+#     condition: $TRAVIS_EVENT_TYPE = push
