--- a/.travis.yml
+++ b/.travis.yml
@@ -17,14 +17,14 @@ before_install:
 before_script:
   - git diff --exit-code yarn.lock
   # configure git to tag release
-  - git config --global user.email "travis-ci@meetup.com"
-  - git config --global user.name "muptravis"
-  - git config --global push.default matching
-  # configure ssh auth to push tags to GH
-  - eval "$(ssh-agent)"
-  - echo "$GITHUB_DEPLOY_KEY" > /tmp/github_deploy_key
-  - chmod 600 /tmp/github_deploy_key
-  - ssh-add /tmp/github_deploy_key
+  # - git config --global user.email "travis-ci@meetup.com"
+  # - git config --global user.name "muptravis"
+  # - git config --global push.default matching
+  # # configure ssh auth to push tags to GH
+  # - eval "$(ssh-agent)"
+  # - echo "$GITHUB_DEPLOY_KEY" > /tmp/github_deploy_key
+  # - chmod 600 /tmp/github_deploy_key
+  # - ssh-add /tmp/github_deploy_key
 
 script:
   - make publish
