--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
     "packages/*"
   ],
   "devDependencies": {
-    "eslint": "^5.13.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-flowtype": "^3.4.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "lerna": "^3.4.3",
-    "lint-staged": "^8.1.3",
-    "prettier": "^1.16.4"
+    "eslint": "5.13.0",
+    "eslint-config-prettier": "4.0.0",
+    "eslint-loader": "2.1.2",
+    "eslint-plugin-flowtype": "3.4.1",
+    "eslint-plugin-prettier": "3.0.1",
+    "eslint-plugin-react": "7.12.4",
+    "lerna": "3.4.3",
+    "lint-staged": "8.1.3",
+    "prettier": "1.16.4"
   },
   "husky": {
     "hooks": {
