--- a/packages/swarm-components/package.json
+++ b/packages/swarm-components/package.json
@@ -35,19 +35,19 @@
     "react": "^16.6.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.4.2",
-    "@babel/preset-flow": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-plugin-react-docgen": "^2.0.2",
-    "bundlesize": "^0.17.0",
-    "flow-bin": "^0.86.0"
+    "@babel/cli": "7.1.5",
+    "@babel/core": "7.1.6",
+    "@babel/preset-env": "7.4.2",
+    "@babel/preset-flow": "7.0.0",
+    "@babel/preset-react": "7.0.0",
+    "babel-plugin-react-docgen": "2.0.2",
+    "bundlesize": "0.17.0",
+    "flow-bin": "0.86.0"
   },
   "dependencies": {
-    "@meetup/swarm-constants": "^0.2.6",
-    "classnames": "^2.2.6",
-    "html-loader": "^0.5.5",
-    "swarm-icons": "^3.8.354"
+    "@meetup/swarm-constants": "0.2.6",
+    "classnames": "2.2.6",
+    "html-loader": "0.5.5",
+    "swarm-icons": "3.8.354"
   }
 }
