--- a/packages/swarm-docs/package.json
+++ b/packages/swarm-docs/package.json
@@ -7,31 +7,31 @@
     "access": "public"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^0.15.6",
-    "@mdx-js/tag": "^0.15.6",
-    "@meetup/swarm-components": "^0.5.11",
-    "@meetup/swarm-constants": "^0.2.6",
-    "@meetup/swarm-styles": "^0.1.15",
-    "constants": "^0.0.2",
-    "core-js": "^2.6.5",
-    "gatsby": "^2.0.19",
-    "gatsby-image": "^2.0.15",
-    "gatsby-mdx": "^0.2.0",
-    "gatsby-plugin-flow": "^1.0.2",
-    "gatsby-plugin-manifest": "^2.0.5",
-    "gatsby-plugin-offline": "^2.0.5",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.0.7",
-    "gatsby-source-filesystem": "^2.0.4",
-    "gatsby-transformer-sharp": "^2.1.4",
-    "html-loader": "^0.5.5",
-    "react": "^16.8.0",
-    "react-docgen-loader": "^2.9.1",
-    "react-dom": "^16.8.0",
-    "react-helmet": "^5.2.0",
-    "react-live": "^1.12.0",
-    "serve": "^10.0.2",
-    "swarm-icons": "^3.8.354"
+    "@mdx-js/mdx": "0.15.6",
+    "@mdx-js/tag": "0.15.6",
+    "@meetup/swarm-components": "0.5.11",
+    "@meetup/swarm-constants": "0.2.6",
+    "@meetup/swarm-styles": "0.1.15",
+    "constants": "0.0.2",
+    "core-js": "2.6.5",
+    "gatsby": "2.0.19",
+    "gatsby-image": "2.0.15",
+    "gatsby-mdx": "0.2.0",
+    "gatsby-plugin-flow": "1.0.2",
+    "gatsby-plugin-manifest": "2.0.5",
+    "gatsby-plugin-offline": "2.0.5",
+    "gatsby-plugin-react-helmet": "3.0.0",
+    "gatsby-plugin-sharp": "2.0.7",
+    "gatsby-source-filesystem": "2.0.4",
+    "gatsby-transformer-sharp": "2.1.4",
+    "html-loader": "0.5.5",
+    "react": "16.8.0",
+    "react-docgen-loader": "2.9.1",
+    "react-dom": "16.8.0",
+    "react-helmet": "5.2.0",
+    "react-live": "1.12.0",
+    "serve": "10.0.2",
+    "swarm-icons": "3.8.354"
   },
   "keywords": [
     "gatsby"
@@ -46,9 +46,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "babel-plugin-react-docgen": "^2.0.2",
-    "bundlesize": "^0.17.0",
-    "prettier": "^1.14.2"
+    "babel-plugin-react-docgen": "2.0.2",
+    "bundlesize": "0.17.0",
+    "prettier": "1.14.2"
   },
   "repository": {
     "type": "git",
