fix: correcting NumericalInput, calling value directly in onChange

--- a/packages/swarm-components/.babelrc
+++ b/packages/swarm-components/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["@babel/preset-flow", "@babel/preset-react", "@babel/preset-env"],
-  "plugins": ["react-docgen"]
+  "plugins": ["react-docgen", "@babel/plugin-proposal-class-properties"]
 }
