--- a/packages/swarm-constants/package.json
+++ b/packages/swarm-constants/package.json
@@ -19,13 +19,15 @@
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1",
-    "build": "npx style-dictionary build"
+    "build": "node ./build.js",
+    "clean": "rm -rf build"
   },
   "bugs": {
     "url": "https://github.com/meetup/swarm-ui/issues"
   },
   "devDependencies": {
     "bundlesize": "^0.17.0",
+    "lodash": "^4.17.11",
     "style-dictionary": "hsbacot/style-dictionary#buxfix/css-comments"
   }
 }
