chore(swarm-constants): new build script using npm modules

--- a/packages/swarm-constants/config.json
+++ b/packages/swarm-constants/config.json
@@ -15,6 +15,9 @@
       "files": [{
         "destination": "variables.css",
         "format": "css/variables"
+      },{
+        "destination": "classnames.css",
+        "format": "custom/format/classnames"
       }]
     }
   }
