fix(swarm-constants): fix template and new build output

--- a/packages/swarm-constants/templates/classnames.template
+++ b/packages/swarm-constants/templates/classnames.template
@@ -1,3 +1,6 @@
 <% _.each(allProperties, function(prop) {
-%>$<%= prop.name %>: <%= prop.value %>;<% if (prop.comment) { %> // <%= prop.comment %><% } %>
+%>.<%= prop.name %> {
+    color: <%= prop.value %>;
+}
+
 <% }); %>
