chore(swarm-constants): registerFilter for creating classnames.css

--- a/packages/swarm-constants/config.json
+++ b/packages/swarm-constants/config.json
@@ -17,7 +17,8 @@
         "format": "css/variables"
       },{
         "destination": "classnames.css",
-        "format": "custom/format/classnames"
+        "format": "custom/format/classnames",
+        "filter": "isColorProp"
       }]
     }
   }
