--- a/packages/swarm-components/package.json
+++ b/packages/swarm-components/package.json
@@ -18,7 +18,7 @@
     "url": "git+https://github.com/meetup/swarm-ui.git"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1",
+    "test": "NODE_ENV=test jest --config jest.config.json",
     "build": "babel src/ -d lib/",
     "develop": "babel src/ --watch -d lib/"
   },
