--- a/packages/swarm-components/package.json
+++ b/packages/swarm-components/package.json
@@ -1,53 +1,60 @@
 {
-  "name": "@meetup/swarm-components",
-  "version": "0.6.5",
-  "description": "Web Components for Swarm",
-  "author": "hsbacot <hsbacot@gmail.com>",
-  "homepage": "https://github.com/meetup/swarm-ui#readme",
-  "license": "ISC",
-  "main": "lib/index.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/meetup/swarm-ui.git"
-  },
-  "scripts": {
-    "test": "NODE_ENV=test jest --config jest.config.json",
-    "build": "babel src/ -d lib/",
-    "develop": "babel src/ --watch -d lib/"
-  },
-  "bugs": {
-    "url": "https://github.com/meetup/swarm-ui/issues"
-  },
-  "bundlesize": [
-    {
-      "path": "lib/*.js",
-      "maxSize": "> 10%"
-    }
-  ],
-  "peerDependencies": {
-    "react": "^16.6.3"
-  },
-  "devDependencies": {
-    "@babel/cli": "7.4.3",
-    "@babel/core": "7.4.3",
-    "@babel/plugin-proposal-class-properties": "7.4.0",
-    "@babel/preset-env": "7.4.3",
-    "@babel/preset-flow": "7.0.0",
-    "@babel/preset-react": "7.0.0",
-    "babel-plugin-react-docgen": "2.0.2",
-    "flow-bin": "0.96.0"
-  },
-  "dependencies": {
-    "@meetup/swarm-constants": "^0.2.9",
-    "classnames": "2.2.6",
-    "html-loader": "0.5.5",
-    "swarm-icons": "3.8.354"
-  }
+	"name": "@meetup/swarm-components",
+	"version": "0.6.5",
+	"description": "Web Components for Swarm",
+	"author": "hsbacot <hsbacot@gmail.com>",
+	"homepage": "https://github.com/meetup/swarm-ui#readme",
+	"license": "ISC",
+	"main": "lib/index.js",
+	"directories": {
+		"lib": "lib",
+		"test": "__tests__"
+	},
+	"files": [
+		"lib"
+	],
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/meetup/swarm-ui.git"
+	},
+	"scripts": {
+		"test": "NODE_ENV=test jest --config jest.config.json",
+		"build": "babel src/ -d lib/",
+		"develop": "babel src/ --watch -d lib/"
+	},
+	"bugs": {
+		"url": "https://github.com/meetup/swarm-ui/issues"
+	},
+	"bundlesize": [
+		{
+			"path": "lib/*.js",
+			"maxSize": "> 10%"
+		}
+	],
+	"peerDependencies": {
+		"react": "^16.6.3"
+	},
+	"devDependencies": {
+		"@babel/cli": "7.4.3",
+		"@babel/core": "7.4.3",
+		"@babel/plugin-proposal-class-properties": "7.4.0",
+		"@babel/preset-env": "7.4.3",
+		"@babel/preset-flow": "7.0.0",
+		"@babel/preset-react": "7.0.0",
+		"babel-plugin-react-docgen": "2.0.2",
+		"flow-bin": "0.96.0",
+		"@babel/plugin-transform-async-to-generator": "7.4.0",
+		"@babel/plugin-transform-runtime": "7.4.3",
+		"hapi": "18.1.0",
+		"inert": "5.1.3",
+		"jest": "24.7.1",
+		"jest-image-snapshot": "2.8.1",
+		"puppeteer": "1.14.0"
+	},
+	"dependencies": {
+		"@meetup/swarm-constants": "^0.2.9",
+		"classnames": "2.2.6",
+		"html-loader": "0.5.5",
+		"swarm-icons": "3.8.354"
+	}
 }
