fix: added package.jsons to .prettierignore, reformatted package.json

--- a/.prettierignore
+++ b/.prettierignore
@@ -6,3 +6,5 @@ packages/swarm-docs/public
 packages/swarm-constants
 packages/swarm-docs
 packages/swarm-styles
+package.json
+packages/**/package.json
