--- a/packages/swarm-components/package.json
+++ b/packages/swarm-components/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "test": "NODE_ENV=test jest --config jest.config.json",
-    "build": "babel src/ -d lib/",
+    "build": "babel src --out-dir lib --ignore test.js,test.jsx",
     "develop": "babel src/ --watch -d lib/"
   },
   "bugs": {
