--- a/packages/swarm-components/package.json
+++ b/packages/swarm-components/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "test": "NODE_ENV=test jest --config jest.config.json",
-    "build": "npx babel src --out-dir lib --ignore 'src/**/*.test.js','src/**/*.test.jsx'",
+    "build": "npx babel src --out-dir lib --ignore 'src/**/*.test.js','src/**/*.test.jsx','src/testUtils/**/*'",
     "develop": "npx babel src/ --watch -d lib/"
   },
   "bugs": {
