--- a/packages/swarm-components/package.json
+++ b/packages/swarm-components/package.json
@@ -55,6 +55,7 @@
     "@meetup/swarm-constants": "^0.2.11",
     "classnames": "2.2.6",
     "html-loader": "0.5.5",
+    "slugify": "^1.3.4",
     "swarm-icons": "3.8.354"
   }
 }
