--- a/packages/swarm-components/package.json
+++ b/packages/swarm-components/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "@meetup/swarm-constants": "^0.2.11",
     "classnames": "2.2.6",
+    "get-port": "^5.0.0",
     "html-loader": "0.5.5",
     "swarm-icons": "3.8.354"
   }
