--- a/packages/swarm-components/package.json
+++ b/packages/swarm-components/package.json
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "@meetup/swarm-constants": "^0.2.11",
+    "autosize": "^4.0.2",
     "classnames": "2.2.6",
     "html-loader": "0.5.5",
     "swarm-icons": "3.8.354"
