--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_script:
   # Exit the build if there are any diffs in the yarn.lock file
   - git diff --exit-code yarn.lock
   # Verifies that versions of the package deps in package.json match those in yarn’s lock file
-  - yarn check
+  # - yarn check
 
 # TODO: script stage should be flow check, run test
 # and `make publish` should be moved to `after_success`
