--- a/packages/swarm-components/package.json
+++ b/packages/swarm-components/package.json
@@ -46,10 +46,12 @@
     "babel-plugin-react-docgen": "2.0.2",
     "flow-bin": "0.96.0",
     "hapi": "18.1.0",
+    "html-loader": "^0.5.5",
     "inert": "5.1.3",
     "jest": "24.7.1",
     "jest-image-snapshot": "2.8.1",
-    "puppeteer": "1.14.0"
+    "puppeteer": "1.14.0",
+    "swarm-icons": "^3.8.354"
   },
   "dependencies": {
     "@meetup/swarm-constants": "^0.2.11",
