--- a/packages/swarm-components/package.json
+++ b/packages/swarm-components/package.json
@@ -49,8 +49,7 @@
     "inert": "5.1.3",
     "jest": "24.7.1",
     "jest-image-snapshot": "2.8.1",
-    "puppeteer": "1.14.0",
-    "swarm-icons": "^3.8.354"
+    "puppeteer": "1.14.0"
   },
   "dependencies": {
     "@meetup/swarm-constants": "^0.2.11",
