fix: test for CSS files availability before doing visual testing

--- a/packages/swarm-components/jest.config.json
+++ b/packages/swarm-components/jest.config.json
@@ -1,5 +1,6 @@
 {
 	"moduleFileExtensions": ["js", "jsx", "node", "json"],
 	"testRegex": "(src|util|scripts)/.*\\.test\\.jsx?$",
-	"transformIgnorePatterns": ["node_modules"]
+	"transformIgnorePatterns": ["node_modules"],
+	"globalSetup": "<rootDir>/src/testUtils/prerequisites.js"
 }
