--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ before_install:
   - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > $HOME/.npmrc
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.13.0
   - export PATH=$HOME/.yarn/bin:$PATH
+  # install travis-ci `artifacts` tool
+  - curl -sL https://raw.githubusercontent.com/travis-ci/artifacts/master/install | bash
 
 before_script:
   # Exit the build if there are any diffs in the yarn.lock file
@@ -30,3 +32,8 @@ script:
 after_success:
   # use lerna publish to version and deploy new packages
   - make publish
+
+after_failure:
+  # use travis-ci/artifacts tool to upload any failed
+  # visual regression test diffs to s3
+  - make upload-artifacts
