--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "lerna run build"
+    "build": "lerna run build",
+    "build:visual": "docker build -t screenshot:latest ./;",
+    "test:visual": "yarn build:visual && docker run -t screenshot:latest 'cd packages/swarm-components/ && yarn test || true && ls src/__image_snapshots__/__diff_output__'",
+    "copy:test:visual": "echo 'do something to get __diff_output__ out of the container'",
+    "test:visual:execute": "cd packages/swarm-components/ && yarn test || true && ls src/__image_snapshots__"
   },
   "devDependencies": {
     "@commitlint/cli": "7.5.2",
