--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ script:
   # Build the artifacts to publish
   - yarn build
   # Run the visual diff regression tests
-  - yarn test:integration
+  - make test-visual
 
 after_success:
   # use lerna publish to version and deploy new packages
