--- a/packages/swarm-components/package.json
+++ b/packages/swarm-components/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "test": "yarn test:integration",
     "test:integration": "NODE_ENV=test jest --config jest.config.int.json",
+    "test:integration:updateSnapshot": "yarn test:integration -u",
     "build": "npx babel src --out-dir lib --ignore 'src/**/*.test.js','src/**/*.test.jsx','src/testUtils/**/*'",
     "develop": "npx babel src/ --watch -d lib/"
   },
