--- a/packages/swarm-components/package.json
+++ b/packages/swarm-components/package.json
@@ -45,6 +45,9 @@
     "@babel/preset-flow": "7.0.0",
     "@babel/preset-react": "7.0.0",
     "babel-plugin-react-docgen": "2.0.2",
+    "enzyme": "3.9.0",
+    "enzyme-adapter-react-16": "1.12.1",
+    "enzyme-to-json": "3.3.4",
     "flow-bin": "0.96.0",
     "get-port": "^5.0.0",
     "hapi": "18.1.0",
