--- a/packages/swarm-components/package.json
+++ b/packages/swarm-components/package.json
@@ -39,8 +39,6 @@
     "@babel/cli": "7.4.3",
     "@babel/core": "7.4.3",
     "@babel/plugin-proposal-class-properties": "7.4.0",
-    "@babel/plugin-transform-async-to-generator": "7.4.0",
-    "@babel/plugin-transform-runtime": "7.4.3",
     "@babel/preset-env": "7.4.3",
     "@babel/preset-flow": "7.0.0",
     "@babel/preset-react": "7.0.0",
@@ -49,12 +47,7 @@
     "enzyme-adapter-react-16": "1.12.1",
     "enzyme-to-json": "3.3.4",
     "flow-bin": "0.96.0",
-    "get-port": "^5.0.0",
-    "hapi": "18.1.0",
-    "inert": "5.1.3",
-    "jest": "24.7.1",
-    "jest-image-snapshot": "2.8.1",
-    "puppeteer": "1.14.0"
+    "jest": "24.7.1"
   },
   "dependencies": {
     "@meetup/swarm-constants": "^0.3.1",
