--- a/packages/swarm-components/package.json
+++ b/packages/swarm-components/package.json
@@ -18,8 +18,8 @@
     "url": "git+https://github.com/meetup/swarm-ui.git"
   },
   "scripts": {
-    "test": "yarn test:integration",
-    "test:integration": "NODE_ENV=test jest --config jest.config.int.json",
+    "test": "yarn test:unit",
+    "test:unit": "NODE_ENV=test jest --config jest.config.json",
     "build": "npx babel src --out-dir lib --ignore 'src/**/*.test.js','src/**/*.test.jsx','src/testUtils/**/*'",
     "develop": "npx babel src/ --watch -d lib/"
   },
