chore: enable unit tests in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,9 +26,8 @@ before_script:
 script:
   # Build the artifacts to publish
   - yarn build
-  # Run the visual diff regression tests
-  # disabling tests until docker env is available, allows us to publish packages
-  # - yarn test:integration
+  # Run unit tests
+  - yarn test:unit
 
 after_success:
   # use lerna publish to version and deploy new packages
