--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "lerna run build",
     "test": "yarn && yarn build && yarn test:unit",
-    "test:unit": "lerna run --scope @meetup/swarm-components test:unit --stream"
+    "test:unit": "lerna run --scope @meetup/swarm-components test:unit --stream",
+    "test:updateSnaps": "yarn test:unit -- -- --u"
   },
   "devDependencies": {
     "@commitlint/cli": "7.5.2",
