chore: now file at root

--- a/packages/swarm-docs/now.json
+++ b/packages/swarm-docs/now.json
@@ -3,7 +3,7 @@
   "name": "@meetup/swarm-docs",
   "builds": [
     {
-      "src": "package.json",
+      "src": "packages/swarm-docs/package.json",
       "use": "@now/static-build",
       "config": { "distDir": "public" }
     }
