--- a/now.json
+++ b/now.json
@@ -5,7 +5,7 @@
     {
       "src": "packages/swarm-docs/package.json",
       "use": "@now/static-build",
-      "config": { "distDir": "public" }
+      "config": { "distDir": "packages/swarm-docs/public" }
     }
   ]
 }
