--- a/packages/swarm-docs/package.json
+++ b/packages/swarm-docs/package.json
@@ -16,6 +16,7 @@
   },
   "scripts": {
     "build": "gatsby build",
+    "now-build": "npm run build",
     "develop": "gatsby develop -p 5555",
     "start": "serve public/",
     "format": "prettier --write \"src/**/*.js\"",
