--- a/packages/swarm-docs/package.json
+++ b/packages/swarm-docs/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "build": "gatsby build",
     "now-build": "npm run build",
+    "now-dev": "gatsby develop -p $PORT",
     "develop": "gatsby develop -p 5555",
     "start": "serve public/",
     "format": "prettier --write \"src/**/*.js\"",
