chore: moving now config to root

--- a/now.json
+++ b/now.json
@@ -3,10 +3,10 @@
   "name": "@meetup/swarm-docs",
   "builds": [
     {
-      "src": "packages/swarm-docs/package.json",
+      "src": "package.json",
       "use": "@now/static-build",
       "config": { 
-        "distDir": "public"
+        "distDir": "packages/swarm-docs/public"
       }
     }
   ]
