--- a/now.json
+++ b/now.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
   "name": "@meetup/swarm-docs",
+  "alias": "swarm-docs.now.sh",
   "builds": [
     {
       "src": "package.json",
