fix: adding flow support and prepush hooks

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "eslint-plugin-flowtype": "3.5.1",
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-react": "7.12.4",
+    "flow": "^0.2.3",
+    "flow-bin": "^0.100.0",
+    "flow-typed": "^2.5.2",
     "husky": "2.3.0",
     "lerna": "3.13.1",
     "lint-staged": "8.1.7",
