chore: upgrading to mdx v1 from v0

--- a/packages/swarm-docs/package.json
+++ b/packages/swarm-docs/package.json
@@ -26,16 +26,16 @@
     "babel-preset-gatsby": "^0.1.11"
   },
   "dependencies": {
-    "@mdx-js/mdx": "0.20.3",
-    "@mdx-js/tag": "0.20.3",
+    "@mdx-js/mdx": "^1.0.20",
+    "@mdx-js/react": "^1.0.20",
     "@meetup/swarm-components": "^0.13.19",
     "@meetup/swarm-constants": "^0.3.2",
     "@meetup/swarm-styles": "^0.5.17",
     "constants": "0.0.2",
     "core-js": "2.6.5",
-    "gatsby": "2.3.14",
+    "gatsby": "^2.8.8",
     "gatsby-image": "2.0.37",
-    "gatsby-mdx": "0.4.4",
+    "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-flow": "1.0.4",
     "gatsby-plugin-manifest": "2.0.26",
     "gatsby-plugin-offline": "2.0.25",
