--- a/packages/swarm-constants/config.json
+++ b/packages/swarm-constants/config.json
@@ -27,7 +27,7 @@
       "files": [{
         "destination": "colors.js",
 				"format": "custom/format/colorSwatch",
-				"filter": "isColorProp"
+				"filter": "isColorNotFontProp"
       }]
 		}
   }
