--- a/packages/swarm-styles/package.json
+++ b/packages/swarm-styles/package.json
@@ -28,6 +28,7 @@
     "postcss-import": "12.0.1"
   },
   "dependencies": {
-    "@meetup/swarm-constants": "^0.3.2"
+    "@meetup/swarm-constants": "^0.3.2",
+    "@reach/menu-button": "^0.1.18"
   }
 }
