--- a/packages/swarm-components/package.json
+++ b/packages/swarm-components/package.json
@@ -21,7 +21,7 @@
     "test": "yarn test:unit",
     "test:unit": "NODE_ENV=test jest --config jest.config.json",
     "build": "npx babel src --out-dir lib --ignore 'src/**/*.test.js','src/**/*.test.jsx','src/testUtils/**/*'",
-    "develop": "npx babel src/ --watch -d lib/"
+    "develop": "yarn build && npx babel src/ --watch -d lib/"
   },
   "bugs": {
     "url": "https://github.com/meetup/swarm-ui/issues"
