--- a/.prettierignore
+++ b/.prettierignore
@@ -6,5 +6,7 @@ packages/swarm-docs/public
 packages/swarm-constants
 packages/swarm-docs
 packages/swarm-styles
+packages/swarm-icons/src/components
+packages/swarm-icons/src/icons
 package.json
 packages/**/package.json
