--- a/packages/swarm-icons/package.json
+++ b/packages/swarm-icons/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@meetup/swarm-icons",
   "version": "0.1.2",
-  "description": "> TODO: description",
+  "description": "Icon Components for Meetup's Swarm Design System",
   "author": "hsbacot <hsbacot@gmail.com>",
   "homepage": "https://github.com/meetup/swarm-ui#readme",
   "license": "ISC",
-  "main": "lib/swarm-icons.js",
+  "main": "lib/index.js",
   "directories": {
     "lib": "lib"
   },
@@ -22,6 +22,7 @@
   "scripts": {
     "clean:components": "rm -f src/components/**/*.jsx",
     "clean:icons": "rm src/icons/**/*.svg",
+    "clean:names": "src/rename.js",
     "generate": "npx svgo src/icons/**/*.svg && yarn clean:components && src/build.js --f=solid && src/build.js --f=line && src/build.js --f=large",
     "build": "yarn generate && npx babel src --out-dir lib --ignore 'src/**/*.test.js','src/build.js'"
   },
