--- a/packages/swarm-icons/package.json
+++ b/packages/swarm-icons/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@meetup/swarm-icons",
   "version": "0.2.0",
-  "description": "> TODO: description",
+  "description": "Icon Components for Meetup's Swarm Design System",
   "author": "hsbacot <hsbacot@gmail.com>",
   "homepage": "https://github.com/meetup/swarm-ui#readme",
   "license": "ISC",
