--- a/packages/swarm-components/package.json
+++ b/packages/swarm-components/package.json
@@ -52,6 +52,7 @@
     "@reach/menu-button": "^0.1.18",
     "autosize": "^4.0.2",
     "classnames": "2.2.6",
+    "framer-motion": "^1.6.8",
     "swarm-icons": "3.8.354"
   }
 }
