feat: checkbox to typescript

--- a/packages/swarm-components/tsconfig.json
+++ b/packages/swarm-components/tsconfig.json
@@ -1,4 +1,3 @@
-  
 {
   "compilerOptions": {
     "incremental": true,
@@ -14,11 +13,11 @@
     "lib": ["es6", "dom", "esnext.array"],
     "jsx": "react",
     "allowSyntheticDefaultImports": true,
-    // "baseUrl": "./packages",
+    "baseUrl": "./packages",
     "strict": true,
-    // "paths": {
-    //   "@meetup/*": ["./*/src"]
-    // },
+    "paths": {
+      "@meetup/*": ["./*/src"]
+    },
     "resolveJsonModule": true,
     "outDir": "./lib",
     "rootDirs": ["src"],
