feat: typescript conversion wip

--- a/packages/swarm-components/.babelrc
+++ b/packages/swarm-components/.babelrc
@@ -1,5 +1,5 @@
 {
-	"presets": ["@babel/preset-flow", "@babel/preset-react", "@babel/preset-env", "@babel/preset-typescript"],
+	"presets": ["@babel/preset-react", "@babel/preset-env", "@babel/preset-typescript"],
 	"plugins": [
 		"react-docgen",
 		"@babel/plugin-proposal-class-properties"
