feat: typescript task in husky, correct types

--- a/packages/swarm-components/tsconfig.json
+++ b/packages/swarm-components/tsconfig.json
@@ -1,27 +1,9 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "incremental": true,
-    "module": "commonjs",
-    "declaration": true,
-    "noImplicitAny": false,
-    "removeComments": true,
-    "noLib": false,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "target": "es6",
-    "sourceMap": true,
-    "lib": ["es6", "dom", "esnext.array"],
-    "jsx": "react",
-    "allowSyntheticDefaultImports": true,
-    "baseUrl": "./packages",
-    "strict": true,
-    "paths": {
-      "@meetup/*": ["./*/src"]
-    },
-    "resolveJsonModule": true,
-    "outDir": "./lib",
-    "rootDirs": ["src"],
+    "emitDeclarationOnly": true,
+    "rootDir": "./src",
+    "outDir": "./lib"
   },
-  "exclude": ["node_modules", "**/*.test.ts"],
-  "include": ["./src"],
+  "exclude": ["./node_modules"]
 }
