--- a/packages/swarm-components/tsconfig.json
+++ b/packages/swarm-components/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "emitDeclarationOnly": true,
     "rootDir": "./src",
-    "outDir": "./lib"
+    "outDir": "./lib",
+    "types": []
   },
   "exclude": ["./node_modules"]
 }
