--- a/packages/swarm-components/package.json
+++ b/packages/swarm-components/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "test": "yarn test:unit",
     "test:unit": "NODE_ENV=test jest --config jest.config.json",
-    "build": "npx babel src --out-dir lib --extensions '.js,.jsx,.ts,.tsx' --ignore 'src/**/*.test.js','src/**/*.test.jsx','src/testUtils/**/*'",
+    "build": "npx babel src --out-dir lib --extensions '.js,.jsx,.ts,.tsx' --ignore 'src/**/*.test.js','src/**/*.test.jsx','src/testUtils/**/*' && npx tsc",
     "develop": "yarn build && npx babel src/ --extensions '.js,.jsx,.ts,.tsx' --watch -d lib/"
   },
   "bugs": {
