--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "workspaces": [
     "packages/**"
   ],
+  "engines": { "node": "12.x" },
   "scripts": {
     "build": "yarn build:src && yarn build:docs",
     "build:docs": "lerna run build --scope @meetup/swarm-docs",
